tauri/src-tauri/build_errors_v3.txt
    Checking app v0.1.0 (/Users/ethew/Documents/Github/methil-vibe/electron/src-tauri)
error[E0583]: file not found for module `core`
 --> src/main.rs:6:1
  |
6 | mod core;
  | ^^^^^^^^^
  |
  = help: to create the module `core`, create file "src/core.rs" or "src/core/mod.rs"
  = note: if there is a `mod core` elsewhere in the crate already, import it with `use crate::...` instead

error[E0583]: file not found for module `framework`
 --> src/main.rs:7:1
  |
7 | mod framework;
  | ^^^^^^^^^^^^^^
  |
  = help: to create the module `framework`, create file "src/framework.rs" or "src/framework/mod.rs"
  = note: if there is a `mod framework` elsewhere in the crate already, import it with `use crate::...` instead

error: set `DATABASE_URL` to use query macros online, or run `cargo sqlx prepare` to update the query cache
   --> src/db.rs:131:20
    |
131 |           let rows = sqlx::query_as!(
    |  ____________________^
132 | |             AgentRecord,
133 | |             r#"SELECT 
134 | |                 id, name, workspace, model, 
...   |
137 | |             FROM agents ORDER BY created_at DESC"#
138 | |         )
    | |_________^
    |
    = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the macro `sqlx::query_as` (in Nightly builds, run with -Z macro-backtrace for more info)

error: set `DATABASE_URL` to use query macros online, or run `cargo sqlx prepare` to update the query cache
   --> src/db.rs:167:20
    |
167 |           let rows = sqlx::query_as!(
    |  ____________________^
168 | |             DesktopRecord,
169 | |             "SELECT id, name, color, path, created_at FROM desktops ORDER BY created_at DESC"
170 | |         )
    | |_________^
    |
    = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the macro `sqlx::query_as` (in Nightly builds, run with -Z macro-backtrace for more info)

error: set `DATABASE_URL` to use query macros online, or run `cargo sqlx prepare` to update the query cache
   --> src/db.rs:178:9
    |
178 | /         sqlx::query!(
179 | |             "INSERT OR REPLACE INTO desktops (id, name, color, path, created_at) 
180 | |              VALUES (?, ?, ?, ?, COALESCE((SELECT created_at FROM desktops WHERE id = ?), CURRENT_TIMESTAMP))",
181 | |             desktop.id, desktop.name, desktop.color, desktop.path, desktop.id
182 | |         )
    | |_________^
    |
    = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the macro `sqlx::query` (in Nightly builds, run with -Z macro-backtrace for more info)

error: set `DATABASE_URL` to use query macros online, or run `cargo sqlx prepare` to update the query cache
   --> src/db.rs:196:20
    |
196 |           let rows = sqlx::query_as!(
    |  ____________________^
197 | |             MessageRecord,
198 | |             "SELECT id, agent_id, role, content, model, events, created_at FROM messages WHERE agent_id = ? ORDER BY id ASC",
199 | |             agent_id
200 | |         )
    | |_________^
    |
    = note: this error originates in the macro `$crate::sqlx_macros::expand_query` which comes from the expansion of the macro `sqlx::query_as` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: no method named `emit` found for struct `AppHandle` in the current scope
   --> src/main.rs:66:27
    |
66  |         let _ = app_clone.emit("agent-event", payload);
    |                           ^^^^
    |
   ::: /Users/ethew/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/tauri-2.10.2/src/lib.rs:952:6
    |
952 |   fn emit<S: Serialize + Clone>(&self, event: &str, payload: S) -> Result<()> {
    |      ---- the method is available for `AppHandle` here
    |
    = help: items from traits can only be used if the trait is in scope
help: there is a method `exit` with a similar name, but with different arguments
   --> /Users/ethew/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/tauri-2.10.2/src/app.rs:532:3
    |
532 |   pub fn exit(&self, exit_code: i32) {
    |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: trait `Emitter` which provides `emit` is implemented but not in scope; perhaps you want to import it
    |
4   + use tauri::Emitter;
    |

error[E0599]: no method named `save_agent` found for struct `Arc<DbService>` in the current scope
  --> src/main.rs:92:14
   |
92 |     state.db.save_agent(db::AgentRecord {
   |     ---------^^^^^^^^^^ method not found in `Arc<DbService>`

error[E0599]: no method named `fetch_models` found for struct `Arc<LMStudio>` in the current scope
   --> src/main.rs:157:44
    |
157 |     let lm_studio_models = state.lm_studio.fetch_models().await.unwrap_or_default();
    |                                            ^^^^^^^^^^^^ method not found in `Arc<LMStudio>`
    |
    = help: items from traits can only be used if the trait is in scope
help: trait `LlmProvider` which provides `fetch_models` is implemented but not in scope; perhaps you want to import it
    |
4   + use crate::llm::LlmProvider;
    |

error[E0599]: no method named `startsWith` found for reference `&str` in the current scope
  --> src/llm/openrouter.rs:59:59
   |
59 |                         if trimmed.is_empty() || !trimmed.startsWith("data: ") {
   |                                                           ^^^^^^^^^^
   |
help: there is a method `starts_with` with a similar name
   |
59 -                         if trimmed.is_empty() || !trimmed.startsWith("data: ") {
59 +                         if trimmed.is_empty() || !trimmed.starts_with("data: ") {
   |

error[E0599]: no method named `startsWith` found for reference `&str` in the current scope
  --> src/llm/lmstudio.rs:50:59
   |
50 |                         if trimmed.is_empty() || !trimmed.startsWith("data: ") {
   |                                                           ^^^^^^^^^^
   |
help: there is a method `starts_with` with a similar name
   |
50 -                         if trimmed.is_empty() || !trimmed.startsWith("data: ") {
50 +                         if trimmed.is_empty() || !trimmed.starts_with("data: ") {
   |

Some errors have detailed explanations: E0583, E0599.
For more information about an error, try `rustc --explain E0583`.
error: could not compile `app` (bin "app") due to 11 previous errors
